@@ -1,6 +1,7 @@
 Revision history for Data-Validate-Sanctions
 
 {{$NEXT}}
+        last_updated will now return the timestamp of the latest list that was updated if no argument is provided
 
 0.11      2018-07-11 14:40:36+08:00 Asia/Manila
         Update cached list only on update any of the lists. Handle network errors.
